# searchEngine

./: .gitignore  CMakeLists.txt  README.md  answers.json  config.json  requests.json
header/: converterJSON.h  invertedIndex.h  searchServer.h
include/: converterJSON.h  invertedIndex.h  searchServer.h
resources/: file001.txt  file002.txt  file003.txt  file004.txt  file006.txt  file011.txt  file013.txt  file014.txt  file017.txt  file018.txt
src/: CMakeLists.txt  converterJSON.cpp  invertedIndex.cpp  main.cpp  searchServer.cpp  testGtest.h
tests/: CMakeLists.txt  converterJSON_test.cpp  invertedIndex_test.cpp  searchServer_test.cpp
